<resources>
    <!--<string name="app_name">Nitrogen Notes</string>-->
    <string name="launcher_name">N2</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="msg_no_tasks">No tasks found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="title_activity_notes">Notes</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Lorem ipsum dolor sit amet.</string>
    <string name="delete">DELETE</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_notes">Notes</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help_and_support">Help &amp; Support</string>
    <string name="nav_block_ad">Remove Ads</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--Strings for settings screen-->
    <string name="title_nightmode">Night Mode</string>
    <string name="summary_nightmode">Toggle Night mode ON/OFF</string>
    <string name="key_nightmode">key_nightmode</string>

    <string name="title_fingerauth">Fingerprint Authentication</string>
    <string name="summary_fingerauth">Use your fingerprint to unlock your notes</string>
    <string name="key_fingerauth">key_fingerauth</string>

    <string name="key_bottomnote">key_bottomnote</string>
    <string name="title_bottomnote">Add new Notes to bottom</string>

    <string name="title_trashtime">Auto-Delete Trash</string>
    <string name="summary_trashtime">Specify time before deleting from Trash</string>
    <string name="key_trashtime">key_trashtime</string>

    <string name="title_reminder">Reminder</string>
    <string name="summary_reminder">Set Reminder for Tasks</string>
    <string name="key_reminder">key_reminder</string>

    <string name="title_remindertime">Reminder Time</string>
    <string name="summary_remindertime">Set time for Reminder to notify</string>
    <string name="key_remindertime">key_remindertime</string>

    <!--Strings for Help & Support screen-->
    <string name="help_about_text_1">Nitrogen Notes is an Android Note/Task input application built
        by Red Nitrogen.</string>
    <string name="help_about_text_2">Red Nitrogen is an independent developer specialized in development
        of Android App Development creating new trends across the app space. Keep an eye out for future
        projects on <a href="https://play.google.com/store/apps/dev?id=6715068722362591614">Play Store Developer page.</a> Glad to Help in anyway!</string>
    <string name="tnc_text">This mobile application is made available by Red Nitrogen.\n\n
    Save your important information at your own risk. This is an offline app and doesn\'t have a top
        tier data security. If your data is lost or stolen by any means (even an app update), Red Nitrogen
        will not be responsible and cannot restore your data.\n\n
    You, the user of the App, confirm your acceptance of these App terms of use. If you do not agree to
        these App Terms, you must immediately uninstall the App and discontinue it\'s use. These App Terms should be
        read alongside Privacy Policy.\n\n
    If you have any questions regarding our App, you can email us at rednitrogen@protonmail.com</string>
    <string name="privacy_policy_text">What information is/may be collected from you?\n\n
    This app has no registration/login process and works offline. Your information are safe with you
        and we cannot collect any data from you by any means.\n\n
    Policy updates\n\n
    Red Nitrogen reserves the right to change or update this policy at any time. Such changes shall
        be effective immediately upon version update on Play Store.</string>
    <string name="fq_1">How can I delete my notes or tasks?</string>
    <string name="fa_1">You can slide your note/task to the left and it\'ll delete the same. There\'ll
        be a snackbar at the bottom for few seconds to undo it if done mistakenly. Deleted notes will
        be stored in Trash for a selected time period before auto-removal and deleted tasks are non-recoverable.</string>
    <string name="fq_2">How can I sync my notes/tasks with another device?</string>
    <string name="fa_2">You can not. This app works offline and doesn\'t need you to login/register in
        order to use. So your data is not stored in server and it cannot be synced.</string>
    <string name="fq_3">Why are some settings disabled?</string>
    <string name="fa_3">These settings are currently under development and will be available in
        upcoming app updates (you can get a sneak peek what's coming from here)</string>
    <string name="fq_4">I ran into a major bug. What should I do?</string>
    <string name="fa_4">Please tap on the mail icon on the bottom right of this screen , select Bug
        Report and send us a mail (preferably with screenshots)</string>

    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-2083434115971367~4305125377</string>
    <string name="banner_home_footer">ca-app-pub-2083434115971367/8870345902</string>
    <string name="interstitial_full_screen">ca-app-pub-2083434115971367/4277205216</string>
</resources>
